# my_cmake_project

./: CMakeLists.txt  CMakePresets.json
code/: main.cpp
